--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
+    "react-custom-alert": "^1.0.4",
     "socket.io": "^4.7.1"
   }
 }
